--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "url": "https://github.com/anlancan96/react-native-socketio/issues"
   },
   "homepage": "https://github.com/anlancan96/react-native-socketio#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "ws": ">=3.3.1"
+  }
 }
