--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-socketio-background-service",
   "title": "React Native Socketio",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "TODO",
   "main": "index.js",
   "scripts": {
@@ -23,15 +23,11 @@
     "react-native": ">=0.59.0-rc.0 <1.0.x"
   },
   "devDependencies": {
-    "react": "^16.8.3",
-    "react-native": "^0.59.10"
+    "ws": ">=3.3.1"
   },
   "bugs": {
     "url": "https://github.com/anlancan96/react-native-socketio-background-service/issues"
   },
   "homepage": "https://github.com/anlancan96/react-native-socketio-background-service#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "ws": ">=3.3.1"
-  }
+  "dependencies": {}
 }
