--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 repositories {
@@ -66,6 +70,9 @@ dependencies {
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "android.arch.work:work-runtime:1.0.0"
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation "android.arch.work:work-testing:1.0.0"
 }
 
 def configureReactNativePom(def pom) {
