--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -8,8 +8,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:allowBackup="false">
-        <activity android:name=".SocketIONotificationActivity"
-                  android:screenOrientation="portrait"></activity>
+        <receiver
+            android:name=".SyncDataReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="local.Broadcast"/>
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".SocketIONotificationActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
