--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation "android.arch.work:work-runtime:1.0.0"
     implementation 'com.android.volley:volley:1.1.1'
     implementation "android.arch.work:work-testing:1.0.0"
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
 
 def configureReactNativePom(def pom) {
